// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturePrimary renders correctly with all props 1`] = `
.c0 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
  padding-top: calc(1.5rem);
  padding-bottom: calc(1.5rem);
}

.c0 >* {
  grid-column: 2/auto;
}

.c9 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c9:hover {
  color: #eebbc3;
}

.c9:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c5 {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem;
  background: #232946;
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  max-width: 800px;
  margin: 0 auto;
}

.c7 {
  color: #fffffe;
  line-height: 1.6;
  margin: 0;
}

.c8 {
  color: #b8c1ec;
  line-height: 1;
  margin: 0;
  opacity: 1;
  transition: opacity 0.3s ease-in-out;
}

.c6 {
  color: #b8c1ec;
  line-height: 1;
  margin: 0;
}

.c1 {
  color: #232946;
}

.c3 {
  object-fit: cover;
}

.c2 {
  background: gray;
  aspect-ratio: 16/9;
  min-height: 400px;
  position: relative;
  width: 100%;
}

.c4 {
  position: absolute;
  bottom: 24px;
}

@media (min-width: 600px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
    padding-top: calc(2.5rem);
    padding-bottom: calc(2.5rem);
  }
}

@media (min-width: 1536px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 600px) {
  .c5 {
    padding: 1rem;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
      style="position: relative;"
    >
      <section
        class="c2"
      >
        <img
          alt="Web Development"
          class="c3"
          src="https://images.unsplash.com/photo-1499750310107-5fef28a66643"
        />
      </section>
      <section
        class="c4"
      >
        <section
          aria-label="Heading Box"
          class="c5"
          role="region"
        >
          <span
            class="c6"
            id="pre-heading"
          >
            Featured Article
          </span>
          <h2
            class="c7"
            id="heading-title"
          >
            The Future of Web Development
          </h2>
          <p
            class="c8"
            id="heading-description"
          >
            Discover the latest trends and technologies shaping the future of web development.
          </p>
          <a
            class="c9"
            href="/articles/web-development-future"
            style="display: inline-block; padding: 0.5rem 1rem; border-radius: var(--radii-xs); text-decoration: none;"
            styles="[object Object]"
            tabindex="0"
          >
            Read More
          </a>
        </section>
      </section>
    </section>
  </section>
</div>
`;

exports[`FeaturePrimary renders correctly with long content 1`] = `
.c0 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
  padding-top: calc(1.5rem);
  padding-bottom: calc(1.5rem);
}

.c0 >* {
  grid-column: 2/auto;
}

.c9 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c9:hover {
  color: #eebbc3;
}

.c9:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c5 {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem;
  background: #232946;
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  max-width: 800px;
  margin: 0 auto;
}

.c7 {
  color: #fffffe;
  line-height: 1.6;
  margin: 0;
}

.c8 {
  color: #b8c1ec;
  line-height: 1;
  margin: 0;
  opacity: 1;
  transition: opacity 0.3s ease-in-out;
}

.c6 {
  color: #b8c1ec;
  line-height: 1;
  margin: 0;
}

.c1 {
  color: #232946;
}

.c3 {
  object-fit: cover;
}

.c2 {
  background: gray;
  aspect-ratio: 16/9;
  min-height: 400px;
  position: relative;
  width: 100%;
}

.c4 {
  position: absolute;
  bottom: 24px;
}

@media (min-width: 600px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
    padding-top: calc(2.5rem);
    padding-bottom: calc(2.5rem);
  }
}

@media (min-width: 1536px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 600px) {
  .c5 {
    padding: 1rem;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
      style="position: relative;"
    >
      <section
        class="c2"
      >
        <img
          alt="Web Architecture"
          class="c3"
          src="https://images.unsplash.com/photo-1499750310107-5fef28a66643"
        />
      </section>
      <section
        class="c4"
      >
        <section
          aria-label="Heading Box"
          class="c5"
          role="region"
        >
          <span
            class="c6"
            id="pre-heading"
          >
            In-Depth Analysis
          </span>
          <h2
            class="c7"
            id="heading-title"
          >
            Understanding the Complexities of Modern Web Architecture
          </h2>
          <p
            class="c8"
            id="heading-description"
          >
            A comprehensive guide exploring the intricate details of modern web architecture, from microservices to serverless computing, and how they impact development workflows and business outcomes.
          </p>
          <a
            class="c9"
            href="/articles/web-architecture"
            style="display: inline-block; padding: 0.5rem 1rem; border-radius: var(--radii-xs); text-decoration: none;"
            styles="[object Object]"
            tabindex="0"
          >
            Explore Architecture
          </a>
        </section>
      </section>
    </section>
  </section>
</div>
`;

exports[`FeaturePrimary renders correctly without optional fields 1`] = `
.c0 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
  padding-top: calc(1.5rem);
  padding-bottom: calc(1.5rem);
}

.c0 >* {
  grid-column: 2/auto;
}

.c5 {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem;
  background: #232946;
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  max-width: 800px;
  margin: 0 auto;
}

.c6 {
  color: #fffffe;
  line-height: 1.6;
  margin: 0;
}

.c1 {
  color: #232946;
}

.c3 {
  object-fit: cover;
}

.c2 {
  background: gray;
  aspect-ratio: 16/9;
  min-height: 400px;
  position: relative;
  width: 100%;
}

.c4 {
  position: absolute;
  bottom: 24px;
}

@media (min-width: 600px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
    padding-top: calc(2.5rem);
    padding-bottom: calc(2.5rem);
  }
}

@media (min-width: 1536px) {
  .c0 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c0 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 600px) {
  .c5 {
    padding: 1rem;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
      style="position: relative;"
    >
      <section
        class="c2"
      >
        <img
          alt="Simple Feature"
          class="c3"
          src="https://images.unsplash.com/photo-1499750310107-5fef28a66643"
        />
      </section>
      <section
        class="c4"
      >
        <section
          aria-label="Heading Box"
          class="c5"
          role="region"
        >
          <h2
            class="c6"
            id="heading-title"
          >
            Simple Feature
          </h2>
        </section>
      </section>
    </section>
  </section>
</div>
`;
